welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: illegal character '\u00a7'
while (§estSurBlanc)}
       ^Program:2: error: ')' expected but '}' found.
while (§estSurBlanc)}
                    ^Program:5: error: 'while' expected but '}' found.
	}
        ^