welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
do { avance()
while (§estSurBlanc)}
